# SFML_project

./: CMakeLists.txt
include/: HLayout.hpp  VLayout.hpp  button.hpp  layout.hpp
src/: HLayout.cpp  VLayout.cpp  button.cpp  layout.cpp  main.cpp
